[gd_scene load_steps=10 format=2]

[ext_resource path="res://dialog_assets/number_entry.png" type="Texture" id=1]
[ext_resource path="res://dialog_assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://dialog_assets/inspect_box.png" type="Texture" id=3]
[ext_resource path="res://Password2.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.99999, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="Node2D" type="Node2D"]
pause_mode = 2
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 4 )

[node name="inspect_box" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="box1" type="Sprite" parent="."]
position = Vector2( 64, 72 )
texture = ExtResource( 1 )
hframes = 12

[node name="1" type="Area2D" parent="box1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box1/1"]
shape = SubResource( 1 )

[node name="box2" type="Sprite" parent="."]
position = Vector2( 96, 72 )
texture = ExtResource( 1 )
hframes = 12

[node name="2" type="Area2D" parent="box2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box2/2"]
shape = SubResource( 2 )

[node name="box3" type="Sprite" parent="."]
position = Vector2( 128, 72 )
texture = ExtResource( 1 )
hframes = 12

[node name="3" type="Area2D" parent="box3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box3/3"]
shape = SubResource( 3 )

[node name="box4" type="Sprite" parent="."]
position = Vector2( 160, 72 )
texture = ExtResource( 1 )
hframes = 12

[node name="4" type="Area2D" parent="box4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="box4/4"]
shape = SubResource( 4 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( 192, 72 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="arrow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="arrow/Area2D"]
shape = SubResource( 5 )

[connection signal="input_event" from="box1/1" to="." method="_on_1_input_event"]
[connection signal="input_event" from="box2/2" to="." method="_on_2_input_event"]
[connection signal="input_event" from="box3/3" to="." method="_on_3_input_event"]
[connection signal="input_event" from="box4/4" to="." method="_on_4_input_event"]
[connection signal="input_event" from="arrow/Area2D" to="." method="_on_Area2D_input_event"]
